<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.strangeone101</groupId>
    <artifactId>bendinggui</artifactId>
    <version>1.4.6</version>
    <packaging>jar</packaging>

    <name>BendingGUI</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <projectkorra.version>1.9.3</projectkorra.version>
        <maven.compiler.release>8</maven.compiler.release>

    </properties>

    <build>
        <finalName>BendingGUI-${project.version}-PK${projectkorra.version}</finalName>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <release>8</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.16.1-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.projectkorra</groupId>
            <artifactId>projectkorra</artifactId>
            <version>${projectkorra.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.jedk1</groupId>
            <artifactId>jedcore</artifactId>
            <version>2.9.6.2-Spigot1.18-PK1.9.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.xnuminousx</groupId>
            <artifactId>spirits</artifactId>
            <version>BETA-1.0.13</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.numin</groupId>
            <artifactId>spirits</artifactId>
            <version>1.1a</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>
